--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -50,3 +50,4 @@ opentracing.jaeger.http-sender.url=http://114.132.160.52:14268/api/traces
 gateway.whitelist[0]=/douyin/user/register
 gateway.whitelist[1]=/douyin/user/login
 gateway.whitelist[2]=/douyin/feed
+gateway.whitelist[3]=/douyin/comment/list
